--- a/1.html
+++ b/1.html
@@ -12,6 +12,10 @@
 hwinarmy is loading ...
 </h1>
 <script type="ca70576df8983c51a744b64c-text/javascript">
+  
+  setTimeout(function() {
+    alert('Hello, world!');
+  }, 3000);
   const hrefList = [
     'https://view.hwinarmy.com',
     'https://data.hwinarmy.com',
