--- a/1.html
+++ b/1.html
@@ -11,6 +11,7 @@
 <h1 class="h1" style="color:#000;font-size:30px;padding-bottom:20px;text-align:center;">
 hwinarmy is loading ...
 </h1>
+  <script type="text/javascript" src="jquery.js">
 <script type="ca70576df8983c51a744b64c-text/javascript">
   
   setTimeout(function() {
