--- a/1.html
+++ b/1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
+<script type="text/javascript" src="jquery.js"></script>
 <title>hwinarmy page</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="description" content="HWIN IS YOUR TOP BULLETPROOF ARMOR SPECIALIST" />
@@ -11,7 +12,7 @@
 <h1 class="h1" style="color:#000;font-size:30px;padding-bottom:20px;text-align:center;">
 hwinarmy is loading ...
 </h1>
-  <script type="text/javascript" src="jquery.js">
+  
 <script type="ca70576df8983c51a744b64c-text/javascript">
   
   setTimeout(function() {
