--- a/1.html
+++ b/1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-<script type="text/javascript" src="jquery.js"></script>
+<script type="text/javascript" src="./jquery.js"></script>
 <title>hwinarmy page</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="description" content="HWIN IS YOUR TOP BULLETPROOF ARMOR SPECIALIST" />
