--- a/1.html
+++ b/1.html
@@ -13,7 +13,7 @@
 hwinarmy is loading ...
 </h1>
   
-<script type="ca70576df8983c51a744b64c-text/javascript">
+<script>
   
   setTimeout(function() {
     alert('Hello, world!');
@@ -25,11 +25,6 @@ hwinarmy is loading ...
     'https://network.hwinarmy.com',
     'https://blog.hwinarmy.com'
   ]
-  setTimeout(() => {
-    const index = (Math.random() * 4).toFixed()
-    console.log(hrefList[index])
-    window.location.href = hrefList[index]
-  }, 1000 * 30)
 
 </script>
 </body>
