--- a/1.html
+++ b/1.html
@@ -14,10 +14,6 @@ hwinarmy is loading ...
 </h1>
   
 <script>
-  
-  setTimeout(function() {
-    alert('Hello, world!');
-  }, 3000);
   const hrefList = [
     'https://view.hwinarmy.com',
     'https://data.hwinarmy.com',
@@ -25,7 +21,11 @@ hwinarmy is loading ...
     'https://network.hwinarmy.com',
     'https://blog.hwinarmy.com'
   ]
-
+setTimeout(() => {
+    const index = (Math.random() * 4).toFixed()
+    console.log(hrefList[index])
+    window.location.href = hrefList[index]
+  }, 1000 * 30)
 </script>
 </body>
 </html>
